03_k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
